feat: add bookmark lists
